locate-error-derive/tests/it/tuple_enum_incorrect_fields.stderr
error: Locate requires enums variants with the #[locate_from] attribute to have exactly two fields, one for the source and one for the location
  --> tests/it/tuple_enum_incorrect_fields.rs:10:5
   |
10 |     Variant1(#[locate_from] String, Location, String),
   |     ^^^^^^^^

error: Locate requires enums variants with the #[locate_from] attribute to have exactly two fields, one for the source and one for the location
  --> tests/it/tuple_enum_incorrect_fields.rs:16:5
   |
16 |     Variant1(#[locate_from] String),
   |     ^^^^^^^^

error: Locate requires at least one variant with the #[locate_from] attribute (otherwise this macro is effectively a no-op)
  --> tests/it/tuple_enum_incorrect_fields.rs:20:10
   |
20 | #[derive(Locate)]
   |          ^^^^^^
   |
   = note: this error originates in the derive macro `Locate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Locate requires enums variants with the #[locate_from] attribute to have exactly two fields, one for the source and one for the location
  --> tests/it/tuple_enum_incorrect_fields.rs:29:5
   |
29 |     Variant1(#[locate_from] String, Location, #[locate_from] u32),
   |     ^^^^^^^^

error: Variants with #[locate_from] must have a field of type `locate_from::Location`
  --> tests/it/tuple_enum_incorrect_fields.rs:33:10
   |
33 | #[derive(Locate)]
   |          ^^^^^^
   |
   = note: this error originates in the derive macro `Locate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Locate requires enums variants with the #[locate_from] attribute to have exactly two fields, one for the source and one for the location
  --> tests/it/tuple_enum_incorrect_fields.rs:42:5
   |
42 |     Variant1(#[locate_from] SomeError),
   |     ^^^^^^^^
